Copy the correct file path to clipboard

Previously, the path copied was always the temporary
save file path unless the image was autosaved.
Now, ExportManager keeps track of whether the image has
been saved, and that is used for choosing the correct path.

BUG: 441047